--- a/about copy.html
+++ b/about copy.html
@@ -10,11 +10,11 @@
 <body>
     <div class="container">
         <h2>Personal Data</h2>
-        <p class="info">&#128100; <strong>Name:</strong> Jazh tene Daluna Orale</p>
-        <p class="info">&#128197; <strong>Date of Birth:</strong> October 17, 2002</p>
-        <p class="info">&#127757; <strong>Place of Birth:</strong> Agtatacay Norte, Sapian, Capiz</p>
-        <p class="info">&#128102;  <strong>Age:</strong> 22</p>
-        <p class="info">&#9794; <strong>Sex:</strong> Male</p>
+        <p class="info">&#128100; <strong>Name:</strong> Riza Salubod Tual</p>
+        <p class="info">&#128197; <strong>Date of Birth:</strong> June 02 2005</p>
+        <p class="info">&#127757; <strong>Place of Birth:</strong> San Pedro Aloran Misamis Occidental</p>
+        <p class="info">&#128102;  <strong>Age:</strong> 19</p>
+        <p class="info">&#9794; <strong>Sex:</strong> Female</p>
         <p class="info">&#10084;</i> <strong>Civil Status:</strong> Single</p>
         <p class="info">&#127757; <strong>Citizenship:</strong> Filipino</p>
     </div>
