--- a/about.html
+++ b/about.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Data</title>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    
+    <link rel="stylesheet" href="styles copy.css">
 </head>
 <body>
     <div class="container">
-        <h2>Personal Data</h2>
-        <p class="info">&#128100; <strong>Name:</strong> Jazh tene Daluna Orale</p>
-        <p class="info">&#128197; <strong>Date of Birth:</strong> October 17, 2002</p>
-        <p class="info">&#127757; <strong>Place of Birth:</strong> Agtatacay Norte, Sapian, Capiz</p>
-        <p class="info">&#128102;  <strong>Age:</strong> 22</p>
-        <p class="info">&#9794; <strong>Sex:</strong> Male</p>
-        <p class="info">&#10084;</i> <strong>Civil Status:</strong> Single</p>
-        <p class="info">&#127757; <strong>Citizenship:</strong> Filipino</p>
+        <h2 class="title">Personal Data</h2>
+        <div class="info-card">
+            <p class="info"><i class="fas fa-user"></i> <strong>Name:</strong> Jazh Tene Daluna Orale</p>
+            <p class="info"><i class="fas fa-birthday-cake"></i> <strong>Date of Birth:</strong> October 17, 2002</p>
+            <p class="info"><i class="fas fa-map-marker-alt"></i> <strong>Place of Birth:</strong> Agtatacay Norte, Sapian, Capiz</p>
+            <p class="info"><i class="fas fa-user"></i> <strong>Age:</strong> 22</p>
+            <p class="info"><i class="fas fa-mars"></i> <strong>Sex:</strong> Male</p>
+            <p class="info"><i class="fas fa-heart"></i> <strong>Civil Status:</strong> Single</p>
+            <p class="info"><i class="fas fa-flag"></i> <strong>Citizenship:</strong> Filipino</p>
+        </div>
     </div>
 </body>
 </html>
