--- a/education copy.html
+++ b/education copy.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
-        
+    <link rel="stylesheet" href="skills copy.html">
 </head>
 <body>
-    <div class="education-card">
-        <h2>📚 Education</h2>
-        <div class="section">
-            <p><span class="icon">🏫</span> <strong>San Pedro Aloran Misamis Occidental</strong></p>
-            <p>SY: 2016 - 2017</p>
-            <p><span class="icon">🎓</span> <strong>Saint Matthew's High School of Aloran Inc.</strong></p>
-            <p>SY: 2022 - 2023</p>
-            <p><span class="icon">🏛️</span> <strong>University of Science and Technology of Southern Philippines</strong></p>
-            <p>SY: 2024 - 2025 (Current Student)</p>
+    <div class="education-container">
+        <h2 class="education-title">📚 Education</h2>
+        <div class="education-card">
+            <div class="education-item">
+                <p><span class="icon">🏫</span> <strong>San Pedro Aloran Misamis Occidental</strong></p>
+                <p>SY: 2016 - 2017</p>
+            </div>
+            <div class="education-item">
+                <p><span class="icon">🎓</span> <strong>Saint Matthew's High School of Aloran Inc.</strong></p>
+                <p>SY: 2022 - 2023</p>
+            </div>
+            <div class="education-item">
+                <p><span class="icon">🏛️</span> <strong>University of Science and Technology of Southern Philippines</strong></p>
+                <p>SY: 2024 - 2025 (Current Student)</p>
+            </div>
         </div>
     </div>
 </body>
